--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
+.app {
   text-align: center;
+  color: #9AD0EC;
+  padding: 3%;
+  background: #1572A1;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.container {
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-flow: column wrap;
+  padding: 5px;
+  border-radius: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+img {
+  width: 90%;
+  padding: 0% 5%;
+  border-radius: 20%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-links {
+  background: #EFDAD7;
+  text-decoration: none;
+  display: flex;
+  justify-content: right;
+  font-size: 30px;
+  padding: 0% 3%;
+  border-radius: 50px;
+}
+
+.link {
+  color: #E3BEC6;
+  background: #1572A1;
+  padding: 1% 2%;
+  margin: 2%;
+  text-decoration: none;
+  border-radius: 10px;
+}
+
+h1 {
+  font-size: 60px;
+  
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+input {
+  text-align:center;
+  font-size: 30px;
 }
